--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,10 @@
 version: '2'
 services:
   web:
-    build: .
+    build:
+      context: .
+      args:
+        VERSION: "${VERSION}"
     ports:
       - "8888:8888"
     depends_on:
