add data dir for postgres, and gitignore it. Add start script to force app container startup to wait pending postgres readiness

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,5 +9,9 @@ services:
       - "8888:8888"
     depends_on:
      - postgres
+    entrypoint: ./wait-for-postgres.sh postgres /app/bin/hello_semaphore foreground
+
   postgres:
     image: postgres
+    volumes:
+      - ./data:/var/lib/postgresql/data
